--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <header>
-        <img class="logo" src="./assets/nwwlogo.png" alt="">
+        <a href="https://game-page12-fiverrjob.vercel.app/"><img class="logo" src="./assets/nwwlogo.png" alt=""></a>
+        
 
     </header>
     <div class="main">
